tests/ui/wait-for-local-storage.goml
// This test ensures that the `wait-for-local-storage` command is behaving like expected.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-timeout: 500
// Shouldn't wait here since it's already the case.
wait-for-local-storage: {"something2": null}
click: "#js-wait-local-storage"
// Should wait for 100ms here.
wait-for-local-storage: {"something2": "hello hi"}
// This next one should fail.
wait-for-local-storage: {"something2": "tadam"}
//~^ ERROR: [localStorage item "something2" (of value "tadam") != "hello hi"]
// Check that the script won't stop running anything after the previous command failed.
assert-local-storage: {"something2": "tadam"}
//~^ ERROR: [localStorage item "something2" (of value "tadam") != "hello hi"]
